Fix cloaking issue on IE11

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -23,6 +23,7 @@ body {
 
   &.translate-cloak {
     opacity: 0;
+    display: none !important;
   }
 }
 
